# Cognitive-OS

./: .gitignore  CONTRIBUTING.md  PACKAGE_MANIFEST.md  README.md  conos_cli.py  pyproject.toml  trace_runtime.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
artifacts/phase1h_evidence/: MANIFEST.json  command_log.txt  environment_info.txt  (+3 more)
core/: MAIN_LOOP_MIGRATION_PLAN.md  SPEC.md  __init__.py  adapter_registry.py  base.py  conos_kernel.py  conos_repository_layout.py  main_loop.py  main_loop_components.py  prediction_runtime.py  retrieval_control.py  runtime_budget.py  runtime_paths.py  world_provider.py
decision/: __init__.py  arbiter.py  candidate_cooldown_gate.py  candidate_generator.py  discriminating_action_selector.py  governance_candidate_adapter.py  latent_transfer_organs.py  mechanism_decision_context.py  mode_arbiter.py  risk_model.py  state_sync.py  utility_schema.py  value_alignment.py  value_model.py  world_model_policy.py
docs/: PHASE1_TECHNICAL_EVIDENCE_REPORT.md  agi-north-star.md  agi-refactor-blueprint.md  openai-oauth.md  product-operations.md  public-boundary.md  repo-map.md  runtime-modes.md
evolution/: __init__.py  allowed_surfaces.py  patch_scorecard.py  proposal_evaluator.py  proposal_generator.py  sandbox_runner.py  strict_reaudit.py
experiments/: __init__.py
planner/: SPEC.md  __init__.py  constraint_policy.py  context_adapter.py  objective_decomposer.py  plan_reviser.py  plan_schema.py  plan_state.py  planning_policy.py
scripts/: __init__.py  build_macos_app.py  build_managed_vm_helper.py  check_conos_repo_layout.py  check_runtime_preflight.py  cognitive_loop_ablation.py  conos.py  eval_metrics_panel.py  local_mirror.py  run_arc_agi3.py  run_local_machine.py  run_no_user_tick_soak.py  run_task_discovery_cycle.py  run_webarena.py
self_model/: SPEC.md  __init__.py  action_policy.py  autobiographical_summary.py  capability_envelope.py  capability_profile.py  context_adapter.py  facade.py  identity_ledger.py  reliability_tracker.py  resource_state.py  state.py
tests/: test_action_governance.py  test_action_semantic_strictness.py  test_agent_control_plane.py  test_agi_core_contract.py  test_api_surface_repair.py  test_autonomous_tick.py  test_candidate_generator_recent_feedback.py  test_codex_cli_client.py  test_codex_cli_oauth.py  test_cognitive_loop_ablation.py  test_cognitive_loop_e2e.py  test_cognitive_model_influence.py  test_dashboard_ui.py  test_deliberation_context_runtime.py  test_desktop_app.py  test_end_to_end_learning.py  test_eval_metrics_panel.py  test_evidence_ledger.py  test_goal_pressure.py  test_goal_pressure_planner.py  test_hypothesis_lifecycle.py  test_hypothesis_llm_failover.py  test_internet_ingress.py  test_learning_policy_runtime.py  test_llm_budget.py  test_llm_gateway_safety.py  test_llm_output_adapter.py  test_llm_route_policy_runtime.py  test_llm_route_runtime.py  test_llm_runtime_contracts.py  test_llm_thinking_policy.py  test_local_machine_adapter.py  test_local_mirror.py  test_long_run_supervisor.py  test_main_loop_audit_report.py  test_main_loop_ports.py  test_managed_vm_setup_plan.py  test_model_profile.py  test_no_user_tick_soak.py  test_ollama_client.py  (+30 more)
(+457 files in other folders)
