[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-agi"
version = "0.1.0"
description = "Con OS kernel, adapters, evals, and cognitive research staging repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
]
arc3 = [
    "arc-agi",
    "arcengine",
]

[tool.setuptools]
include-package-data = true
