[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-os"
version = "0.1.0"
description = "Model-agnostic cognitive control plane for AI agents"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ai-agents",
    "cognitive-control-plane",
    "runtime-governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/aLexzzz430/Cognitive-OS"
Issues = "https://github.com/aLexzzz430/Cognitive-OS/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
]
arc3 = [
    "arc-agi",
    "arcengine",
]

[tool.setuptools]
include-package-data = true
